--- a/frontend/index.html
+++ b/frontend/index.html
@@ -109,7 +109,7 @@
                     
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">2. CloudWise: Automating EBS Volume Cleanup</h3>
+                            <h3 class="mb-0">3. Automating EBS Volume Cleanup</h3>
                             <p>
                                 <h4><a href="https://blog.costOptimisation" target="_blank">Blog</a>:</h4>
                                 Successfully developed and deployed a Python-based AWS Lambda function that identifies and deletes orphaned EBS volumes, resulting in a 22% reduction in monthly AWS infrastructure costs. The process is fully automated, scheduled to run monthly via EventBridge with a cron expression. Additionally, an SNS topic was created to send real-time email notifications regarding the status of snapshot deletions, ensuring transparency. Configured an IAM Role with precise permissions for EC2 operations and Lambda invocations to maintain secure operations. A second Lambda function was developed to format and publish notifications to the SNS topic, improving accountability and communication.
