--- a/frontend/index.html
+++ b/frontend/index.html
@@ -89,7 +89,10 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">2. Portfolio Website</h3>
-                            <p><h4><a href="https://madhur.cloudevopsnow.com" target="_blank">Visit my website</a></h4>Developed a fully functional and secure resume website as part of the Cloud Resume Challenge, utilizing AWS and modern web technologies. The project included creating a static resume page with HTML and CSS, deploying it on AWS S3, and using AWS CloudFront for content delivery. Implemented HTTPS communication and configured custom domain registration with Cloudflare. Integrated a visitor counter using JavaScript, which connects to AWS Lambda functions for backend processing and AWS DynamoDB for database storage. Applied infrastructure as code principles with Terraform and implemented CI/CD pipelines with GitHub Actions for seamless deployment.</p>
+                            <p><h4><a href="https://madhur.cloudevopsnow.com" target="_blank">Visit my website</a></h4>Developed a fully functional and secure resume website as part of the Cloud Resume Challenge, utilizing AWS and modern web technologies. The project included creating a static resume page with HTML and CSS, deploying it on AWS S3,
+                                 and using AWS CloudFront for content delivery. Implemented HTTPS communication and configured custom domain registration with GoDaddy. Integrated a visitor counter using JavaScript, which connects to AWS Lambda functions for backend processing and AWS DynamoDB for database storage. Applied 
+                                 <!-- infrastructure as code principles with Terraform and implemented  -->
+                                 CI/CD pipelines with GitHub Actions for seamless deployment.</p>
 						<p><h4>Technologies Used:</h4> <!--HTML | CSS | JavaScript | Azure Storage | Azure CDN | AWS Cloudfront | Custom DNS (Cloudflare) | AWS DynamoDB | Azure Function Apps| Azure CosmosDB | AWS Lambda | Python | AWS CloudWatch | DataDog | Pager Duty | Infrastructure as Code (IaC) | GitHub Actions--></p>
                         <body>
                             <div class="container">
@@ -97,8 +100,8 @@
                                     <li><strong>Front End:</strong> HTML, CSS, JavaScript</li>
                                     <li><strong>Back End:</strong> AWS Lambda, AWS DynamoDB, Python</li>
                                     <li><strong>Infrastructure:</strong> Cloudflare, AWS S3, AWS CloudFront</li>
-                                    <li><strong>Observability:</strong> AWS CloudWatch, DataDog, Pager Duty</li>
-                                    <li><strong>DevOps:</strong> Terraform (IaC), Git, GitHub, GitHub Actions</li>
+                                    <li><strong>Observability:</strong> AWS CloudWatch</li>
+                                    <li><strong>DevOps:</strong> Git, GitHub, GitHub Actions</li>
                                     <li><strong>Test Automation:</strong> Cypress</li>
                             
                                 </ul>
